@startuml


package "Config" {
  class DomibusConnectorLinkConfiguration {
    Properties properties
    String linkImpl
    LinkConfigName configName
  }


  class DomibusConnectorLinkPartner {
    LinkPartnerName linkPartnerName
    LinkMode linkMode
    LinkType linkType
    Properties properties
  }
}

package Active {

  class ActiveLink {
    LinkPlugin linkPlugin
    ConfigurableApplicationContext childContext
    SubmitToLink submitToLink
  }

  class ActiveLinkPartner {
    LinkPlugin linkPlugin
    ConfigurableApplicationContext childContext
    SubmitToLink submitToLink
  }

}


DomibusConnectorLinkConfiguration "*" <-- "1" DomibusConnectorLinkPartner

ActiveLink "1" --> "*" ActiveLinkPartner

ActiveLink "1" --> "*" DomibusConnectorLinkConfiguration
ActiveLinkPartner "1" --> "*" DomibusConnectorLinkPartner



@enduml
